# test_ffi

./: Cargo.toml  rustfmt.toml
lib/: Cargo.toml
lib/src/: lib.rs
main/: Cargo.toml
main/src/: main.rs
