[package]
name = "main"
version = "0.1.0"

edition = { workspace = true }

[dependencies]
log = { workspace = true }
lib = { path = "../lib" }
libloading = "0.8.8"
env_logger = { workspace = true }
jemallocator = { package = "tikv-jemallocator", version = "0.6.0", features = [
    "unprefixed_malloc_on_supported_platforms",
] }